# cca-spec-babel

./: .autom4te.cfg  .cvsignore  AllCCA.hh  CHANGELOG  Makefile.babel.in  Makefile.in  acsite.m4  babel_compat.hh.in  cca.sidl  configure  configure.in  reconfigure.in
config/: cca_babel_branch_version.m4  cca_comp_flags.m4  cca_enable_contrib.m4  cca_enable_mpi.m4  ccafe_libtoolmake.m4  ccafe_shlib_suffix.m4  llnl_libxml.m4
contrib/ccafe/: BabelMain.sidl  ComponentFactory.sidl  ComponentPropertiesService.sidl  ContextEventPublisherService.sidl  ContextEventSubscriberService.sidl  GUIService.sidl  Keys.sidl  Loader.sidl  MPIBorrow.sidl  MPIService.sidl  Makefile  README
contrib/ccafe/c/: ccaffeine_Keys_Impl.c
contrib/ccafe/ce/: COMPARE.EventService.txt  ComponentFactoryEvent.sidl  ComponentFactoryEventListener.sidl  ComponentInstanceAddRequestEvent.sidl  ComponentInstanceAddRequestEventListener.sidl  ComponentInstanceAddedEvent.sidl  ComponentInstanceAddedEventListener.sidl  ComponentInstanceDeleteRequestEvent.sidl  ComponentInstanceDeleteRequestEventListener.sidl  ComponentInstanceDeletedEvent.sidl  ComponentInstanceDeletedEventListener.sidl  ContextConnectionEvent.sidl  ContextConnectionEventListener.sidl  ContextEvent.sidl  ContextEventListener.sidl  ContextEventType.sidl  PortActivityEvent.sidl  PortActivityEventListener.sidl  PortDefinitionEvent.sidl  PortDefinitionEventListener.sidl
contrib/hello/: StringConsumerPort.sidl
doc/: Makefile.in  README  TODO  doxygen.cfg.in  sidltojava
mpi/: gov.cca.common.MPICommSource.sidl  gov.cca.ports.mpi.sidl
src/: .cvsignore  CCA_Babel_Vars.sh.in  MakeIncl_CCA_Babel_Vars.in  Makefile  bld2babel-cpp.in  bld2babel-cpp.tcl  cca-spec-babel-config.in  ctor.in  ctor.tcl  genSCLCCA.sh.in  test-babel-config.in  varlist.in
src/treeReader/: ComponentData.cpp  ComponentData.hpp  Makefile  Makefile.depends  MetaDataParser.cpp  MetaDataParser.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  PortData.cpp  PortData.hpp  XMLCCAExtractor.cpp  XMLCCAExtractor.hh  XMLNode.hpp  treeParser_internal.hpp  treeReaderPublic.hpp
src/treeReader/boost/: README
utils/: Makefile.in  Makefile_template.client.in  gen-spec-depl  generateClientMakefile.sh  setup.py
utils/ccagm/: __init__.py  _debug.py  agsplices.py  appgen.py  cxxfrag.py  gen-cca-main  test-cca-appgen  todo  which.py
utils/ccaxml/: CCAClassXML.py  CCAComponentXML.py  CCAInterfaceXML.py  CCAPortXML.py  CCAXMLEntity.py  genccaxml.py
utils/ccaxml2/: CCAXMLEntity.py  CCAXMLQuery.py  Deployment.py  File.py  Index.py  Makefile  Symbol.py  __init__.py  check1  checkspec  checktk  design.txt  genccaxml  queryccaxml  t.ccomp.depl.cca.ex  testdepsym  testtk
utils/ccaxml2/ex/: Makefile  integrators.MonteCarlo.depl.cca  integrators.MonteCarlo.depl.cca.all  integrators.MonteCarlo.depl.cca.ben  integrators.MonteCarlo.depl.cca.wael_out  wael_test.sh
utils/ccaxml2/ex2/: StringConsumerPort.depl.cca  ccafe_starter.depl.cca  ccafe_starter.depl.cca.new  t.ccomp.depl.cca  t.type4.depl.cca  test.cca  test.cca.new
utils/doc/: something
